--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <!--Slide 5-->
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="./SlideShow/SQLcropsized.jpg" alt="SQL logo">
+                        <img class="Slideshow_Images" src="./Slideshow/SQLcropsized.jpg" alt="SQL logo">
                         <div class="text">back end development, databses and SQL.</div>
                     </div>
                     <!--Slide 6-->
