--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     
                     <br>As a junior software developer I am thrilled to have obtained some front-end work for a company in Austin, TX before graduating from <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy.</a> I will be graduating in winter 2022 from their Full Stack Software Development Course, and was trained and tested in the following languages: HTML, CSS, JavaScript, SQL, React, C# and Python. 
                     <br>
-                    <br>I love to keep busy and want to learn as much as possible about the new industry I'm working in. And as such I would love to colloborate, view potential opportunities, and meet new people. Don't be a stranger! Contact link below.</a> 
+                    <br>I love to keep busy and want to learn as much as possible about the new industry I'm working in. And as such I would love to colloborate, view potential opportunities, and meet new people. Don't be a stranger! </a> 
                 </p>
             </div>
         </div> 
