copied alt file with updates to this one.

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
             <!--Right column-->
             <div class="Column_1">
                 <h1>About</h1>
-                <p>
+                <p class="about-text">
                     Lifelong music devotee turned software engineer. I love to learn and create, whether it's for aesthetics or practicallity.<br>
                     
                     <br>As a junior software developer I am thrilled to have obtained some front-end work for a company in Austin, TX before graduating from <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy.</a> I will be graduating in winter 2022 from their Full Stack Software Development Course, and was trained and tested in the following languages: HTML, CSS, JavaScript, SQL, React, C# and Python. 
                     <br>
-                    <br>I love to keep busy and want to learn as much as possible about the new industry I'm working in. And as such I would love to colloborate, view potential opportunities, and meet new people. Don't be a stranger! </a> 
+                    <br>I love to keep busy and want to learn as much as possible about the new industry I'm working in. And as such I would love to colloborate, view potential opportunities, and meet new people. Don't be a stranger! Contact link below.</a> 
                 </p>
             </div>
         </div> 
@@ -121,7 +121,7 @@
             <!--LeftColumn-->
             <div class="Column_1">
                 <h1>GitHub/LinkedIn</h1>
-                <p>
+                <p class="link-text">
                     GitHub link with coding projects:
                     <br>
                     <p class="center"><a href="https://github.com/gwebb17" target="_blank">Grant Webb's GitHub</a></p>
