basic styling adjustments, removed SQL photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="Video_Text">
             <h1 class="white-text">Grant Webb's Portfolio</h1>
             <strong>
-                <p class="center">
+                <p class="center white-hover-text">
                     <br>
                     <br>A brief introduction to my professional history and experience.
                     <br>
@@ -71,11 +71,6 @@
                     </div>
                     <!--Slide 5-->
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="./SlideShow/SQLcropsized.jpg" alt="SQL logo">
-                        <div class="text">back end development, databses and SQL.</div>
-                    </div>
-                    <!--Slide 6-->
-                    <div class="mySlides fade">
                         <img class="Slideshow_Images" src="./Slideshow/Pianocropsized.jpg" alt="Computer/Final slide">
                         <div class="text"><a class="white-text contact" onclick="openForm()">Let's get started, contact me now!</a></div>
                     </div>
@@ -92,7 +87,6 @@
                     <span class="dot" onclick="currentSlide(3)"></span>
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
-                    <span class="dot" onclick="currentslide(6)"></span>
                 </div>
             </div>
         </div>
@@ -125,7 +119,7 @@
                     GitHub link with coding projects:
                     <br>
                     <p class="center"><a href="https://github.com/gwebb17" target="_blank">Grant Webb's GitHub</a></p>
-                <p>
+                <p class="link-text">
                     Connect on LinkedIn:
                     <br>
                     <p class="center"><a href="https://www.linkedin.com/in/grant-webb-2a181016b/" target="_blank">& LinkedIn</a></p>
