added resume link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="Row" id="GitHub">
             <!--LeftColumn-->
             <div class="Column_1">
-                <h1>GitHub/LinkedIn</h1>
+                <h1>GitHub/LinkedIn/Resume</h1>
                 <p class="link-text">
                     GitHub link with coding projects:
                     <br>
@@ -123,6 +123,11 @@
                     Connect on LinkedIn:
                     <br>
                     <p class="center"><a href="https://www.linkedin.com/in/grant-webb-2a181016b/" target="_blank">& LinkedIn</a></p>
+                </p>
+                <p class="link-text">
+                    Resume
+                    <br>
+                    <p class="center"><a href="https://docs.google.com/document/d/1oORs9nba5wYvXAmnu2mCpugRGdUSJrgl1EhRq1AqY-I/edit?usp=sharing" target="_blank">Resume</a></p>
                 </p>
             </div>
             <!--RightColumn-->
