added badges, github project links, resume section

--- a/index.html
+++ b/index.html
@@ -120,11 +120,18 @@
             <!--LeftColumn-->
             <div class="Column_1">
                 <div class="github-links">
-                    <a href="https://github.com/gwebb17" target="_blank"><h1>|| GITHUB ||</a>
+                    <a href="https://github.com/gwebb17" target="_blank"><h1>|| GITHUB PROJECTS ||</a>
                 </div>
                 <div class="github-list-text">
                     <ul>
-                        <a href="https://github.com/gwebb17/CSharpLiveProject" target="_blank"><li>Theatre Rental Project (C#)</li></a>
+                        <a href="https://github.com/gwebb17/CSharpLiveProject" target="_blank"><li>Theatre Rental CRUD Pages (C#)</li></a>
+                        <br>
+                        <a href="https://github.com/gwebb17/Python_Live_Project" target="_blank"><li>Guitar Wishlist App (Python)</li></a>
+                        <br>
+                        <a href="https://github.com/gwebb17/TicTacToe/tree/master" target="_blank"><li>Tic Tac Toe App (JS)</li></a>
+                        <br>
+                        <a href="https://github.com/gwebb17/Calculator" target="_blank"><li>Calculator Project (JS)</li></a>
+                    </ul>
                 </div>
             </div>
             <!--RightColumn-->
@@ -144,11 +151,15 @@
             </div>
             <!--Contact Form, right Column-->
             <div class="Column_1 Column_tall">
-                <h1 class="link-text">
+                <h1 class="link-text resume-heading">
                     || Resume ||
                 </h1>
                     <br>
-                    <a href="https://docs.google.com/document/d/1oORs9nba5wYvXAmnu2mCpugRGdUSJrgl1EhRq1AqY-I/edit?usp=sharing" target="_blank"><i class="fa-regular fa-clipboard"></i></a>
+                    <div class="clipboard-icon-container">
+                        <a href="https://docs.google.com/document/d/1oORs9nba5wYvXAmnu2mCpugRGdUSJrgl1EhRq1AqY-I/edit?usp=sharing" target="_blank"><i class="fa-regular fa-clipboard fa-6x clipboard-icon"></i></a>
+                        <a href="https://docs.google.com/document/d/1oORs9nba5wYvXAmnu2mCpugRGdUSJrgl1EhRq1AqY-I/edit?usp=sharing" target="_blank"><p class="clipboard-adjacent-text">Resume listing<br> in-depth skills,<br> experience,<br> and education.</p></a>
+                        
+                    </div>
                 
 
                 <div id="Contact">
