added c# algo practice link

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                         <a href="https://github.com/gwebb17/TicTacToe/tree/master" target="_blank"><li>Tic Tac Toe App (JS)</li></a>
                         <br>
                         <a href="https://github.com/gwebb17/Calculator" target="_blank"><li>Calculator Project (JS)</li></a>
+                        <br>
+                        <a href="https://github.com/gwebb17/CSharpAlgoPractice" target="_blank"><li>C# Algorithm Practice</li></a>
                     </ul>
                 </div>
             </div>
